--- a/sysContable-war/web/resources/css/style.css
+++ b/sysContable-war/web/resources/css/style.css
@@ -251,6 +251,16 @@ body {
     background: linear-gradient(to bottom, rgba(173, 216, 230, 0.8), rgba(173, 216, 230, 0.5)) !important;
 }
 
+.panel-pantalla .ui-panel-titlebar {
+    background: #001F3F !important; /* Cambia "tuColor" por el color que desees */
+    border-color: transparent !important; /* Hace transparentes todos los bordes */
+    color: white !important;
+}
+.sin-bordes {
+    border: none !important;
+}
+
+
 .ui-accordion-header.ui-state-active {
     background: linear-gradient(to bottom, rgba(173, 216, 230, 0.8), rgba(173, 216, 230, 0.5)) !important;
     border-radius: 1px !important;
