--- a/sysContable-war/web/resources/css/inicio.css
+++ b/sysContable-war/web/resources/css/inicio.css
@@ -41,7 +41,7 @@ body {
 
 .login-container input[type="submit"] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #001F3F;
     color: #fff;
     padding: 10px;
     border: none;
