--- a/sysContable-war/web/resources/css/1ab.css
+++ b/sysContable-war/web/resources/css/1ab.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : BME_PERSONAL
 */
 form{
-      color: var(--primary-500) !important;
+    color: var(--primary-500) !important;
     border-color: var(--primary-500) !important;
 }
 .custom-panel-header .ui-panel-titlebar {
@@ -128,7 +128,7 @@ Para el encabezado del accordeon
     /* Otros estilos... */
 }
 .custom-menubar {
-    background-color: transparent !important;
+    background-color: var(--primary-50) !important;
     height: 45px !important;
     align-content: center !important;
     margin: 2px !important;
@@ -139,11 +139,11 @@ Para el encabezado del accordeon
 
 
 .custom-menubar .ui-menuitem-text {
-    color: var(--primary-500) !important;
+    color: black !important;
 }
 
 .custom-menubar .ui-menuitem-icon {
-    color: var(--primary-500) !important;
+    color: black !important;
 }
 .custom-menuitem {
     border: 1px solid !important;
@@ -152,8 +152,8 @@ Para el encabezado del accordeon
     margin: 2px !important;
     height: 30px !important;
     align-content: center !important;
-    background: transparent !important;
-    color: var(--primary-500) !important;
+    background: #cce5ff !important;
+    color: black !important;
     padding: 15px !important;
 }
 
@@ -174,11 +174,13 @@ Para el encabezado del accordeon
 /* Estilo para el texto de los elementos del menú al hacer hover */
 .custom-menuitem:hover .ui-menuitem-text {
     color: black !important;
+    font-weight: bold !important;
 }
 
 /* Estilo para el icono de los elementos del menú al hacer hover */
 .custom-menuitem:hover .ui-menuitem-icon {
     color: black !important;
+    font-weight: bold !important;
 }
 
 .ui-datatable.style-table th, 
@@ -363,4 +365,72 @@ Para el encabezado del accordeon
     resize: none !important;  /* Desactiva el redimensionamiento manual */
     border-color: var(--primary-100) !important;
     background-color: var(--primary-50) !important;
+}
+
+
+.ui-dialog{
+    background: var(--primary-50) !important;
+    border-radius: 10px !important;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+    background-color: var(--primary-300) !important;
+    border-radius: 10px !important;
+    padding: 10px !important;
+    margin: 10px !important;;
+}
+
+.ui-dialog .ui-dialog-title {
+    color: white;
+}
+
+
+.ui-dialog .ui-dialog-titlebar .ui-dialog-titlebar-close .ui-icon {
+    color: black !important;
+    border-color: black !important;
+    background: transparent !important;
+}
+.messages {
+    color: #222 !important;
+    padding: 10px !important;
+    border-radius: 4px !important;
+    margin-bottom: 10px !important;
+    width: 100% !important;
+}
+
+.messages .ui-message-detail {
+    color: #222 !important;
+}
+
+.ui-messages-info {
+    width: 100% !important;
+    background-color: #e4f2fd !important;/**COLOR BUENO CELESTE PALIDO*/
+    border-color: #88bde6 !important;
+    color: black !important;
+    font-weight: bold !important;
+}
+
+.ui-messages-warn {
+    background-color: #fff8b3 !important; /* Amarillo pálido */
+    border-color: #ffd700 !important;
+    color: black !important;
+    font-weight: bold !important;
+}
+
+.ui-messages-error {
+    background-color: #ffcccb !important; /* Rojo pálido */
+    border-color: #ff3333 !important;
+    color: black !important;
+    font-weight: bold !important;
+}
+
+.ui-messages-fatal {
+    background-color: #d3d3d3 !important; /* Gris pálido */
+    border-color: #ff0000 !important;
+    color: black !important;
+    font-weight: bold !important;
+}
+
+.ui-growl-message {
+    font-size: 14px;
 }
