--- a/sysContable-war/src/java/reportes/modulos.jrxml
+++ b/sysContable-war/src/java/reportes/modulos.jrxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="modulos" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="eb029fb6-9236-4630-8f98-39ca15198ab7">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="modulos" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3f6c6222-9f64-4894-8414-ee40b6256cdf">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString>
-		<![CDATA[select * from Segmodulo]]>
+		<![CDATA[select * from segmodulo]]>
 	</queryString>
-	<field name="CODMOD" class="java.math.BigDecimal"/>
-	<field name="NOMMODULO" class="java.lang.String"/>
-	<field name="URLDIRECC" class="java.lang.String"/>
+	<field name="CODMOD" class="java.lang.Long">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="NOMMODULO" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="URLDIRECC" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -21,15 +27,15 @@
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="100" height="20" uuid="fd2d0db3-3d6b-4ff8-9ded-406e6588f6a2"/>
+				<reportElement x="0" y="0" width="100" height="20" uuid="e22342db-f770-47d1-852d-bbd42ceac2cc"/>
 				<text><![CDATA[CODMOD]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="0" width="100" height="20" uuid="dc2582c8-6d41-4b09-91c6-3671ac31b03e"/>
+				<reportElement x="100" y="0" width="100" height="20" uuid="c87c6167-bb8b-4008-a511-a347a81996f8"/>
 				<text><![CDATA[NOMMODULO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="200" y="0" width="100" height="20" uuid="da45a414-df88-45e0-95ce-81270469ee92"/>
+				<reportElement x="200" y="0" width="100" height="20" uuid="7c4fb013-3908-4ef7-b484-c14c571e31fe"/>
 				<text><![CDATA[URLDIRECC]]></text>
 			</staticText>
 		</band>
@@ -37,15 +43,15 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="100" height="20" uuid="39227839-17fc-46ca-9557-9f77ff20e098"/>
+				<reportElement x="0" y="0" width="100" height="20" uuid="2d851183-fb3a-42ed-a8fa-6e119d003eb2"/>
 				<textFieldExpression><![CDATA[$F{CODMOD}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="0" width="100" height="20" uuid="f7b53492-5bd5-4d0c-b245-828ffcac9826"/>
+				<reportElement x="100" y="0" width="100" height="20" uuid="05170a9c-634e-42d6-bc98-0ed3c5c728c5"/>
 				<textFieldExpression><![CDATA[$F{NOMMODULO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="200" y="0" width="100" height="20" uuid="559146b8-28ae-418d-bbd7-05df20479659"/>
+				<reportElement x="200" y="0" width="100" height="20" uuid="aca40cd1-92d2-4032-ba27-4895fdeb1b06"/>
 				<textFieldExpression><![CDATA[$F{URLDIRECC}]]></textFieldExpression>
 			</textField>
 		</band>
