--- a/sysContable-war/web/resources/css/cssLoginNue.css
+++ b/sysContable-war/web/resources/css/cssLoginNue.css
@@ -24,7 +24,9 @@ body {
 }
 
 .login-container input[type="text"],
-.login-container input[type="password"] {
+.login-container input[type="password"],
+.login-container input[type="passwordnew"],
+.login-container input[type="passwordconfir"]{
     width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 20px;
@@ -34,7 +36,9 @@ body {
 }
 
 .login-container input[type="text"]:focus,
-.login-container input[type="password"]:focus {
+.login-container input[type="password"]:focus ,
+.login-container input[type="passwordnew"]:focus ,
+.login-container input[type="passwordconfir"]:focus {
     outline: none;
     border-color: #4CAF50;
 }
